--- a/style.css
+++ b/style.css
@@ -36,3 +36,18 @@
     align-items: center; 
     justify-content: center;
   }
+  .horizontal-shake {
+    animation: horizontal-shaking 0.35s infinite;
+  }
+  
+  @keyframes horizontal-shaking {
+    0% { transform: translateX(0) }
+    25% { transform: translateX(5px) }
+    50% { transform: translateX(-5px) }
+    75% { transform: translateX(5px) }
+    100% { transform: translateX(0) }
+  }
+  
+  .horizontal-shake-trigger {
+    animation: horizontal-shaking 0.35s infinite;
+  }
